--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
+    "react-date-range": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "aos": "^2.3.4",
+    "react-scroll": "^1.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
