--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "date-fns": "^2.30.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
-    "react-date-range": "^1.4.0",
-    "date-fns": "^2.30.0",
-    "aos": "^2.3.4",
-    "react-scroll": "^1.9.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
